    Fixed an issue where the editor would fail to load if local storage was disabled #TINY-5935
    Fixed an issue where an uploaded image would reuse a cached image with a different mime type #TINY-5988
    Fixed bug where toolbars and dialogs would not show if the body element was replaced (e.g. with Turbolinks). Patch contributed by spohlenz #GH-5653
    Fixed zero-width spaces incorrectly included in the `wordcount` plugin character count #TINY-5991
    Fixed a regression introduced in 5.2.0 whereby the desktop `toolbar_mode` setting would incorrectly override the mobile default setting #TINY-5998
Version 5.2.2 (2020-04-23)
    Fixed an issue where anchors could not be inserted on empty lines #TINY-2788
    Fixed text decorations (underline, strikethrough) not consistently inheriting the text color #TINY-4757
    Fixed `format` menu alignment buttons inconsistently applying to images #TINY-4057
    Fixed the floating toolbar drawer height collapsing when the editor is rendered in modal dialogs or floating containers #TINY-4837
    Fixed `media` embed content not processing safely in some cases #TINY-4857
Version 5.2.1 (2020-03-25)
    Fixed the "is decorative" checkbox in the image dialog clearing after certain dialog events #FOAM-11
    Fixed possible uncaught exception when a `style` attribute is removed using a content filter on `setContent` #TINY-4742
    Fixed the table selection not functioning correctly in Microsoft Edge 44 or higher #TINY-3862
    Fixed the table resize handles not functioning correctly in Microsoft Edge 44 or higher #TINY-4160
    Fixed the floating toolbar drawer disconnecting from the toolbar when adding content in inline mode #TINY-4725 #TINY-4765
    Fixed `readonly` mode not returning the appropriate boolean value #TINY-3948
    Fixed the `forced_root_block_attrs` setting not applying attributes to new blocks consistently #TINY-4564